@@ -1,3 +1,9 @@
+2004-09-02  Bob Halley  <halley@nominum.com>
+
+	* dns/name.py (Name.to_wire): The 'file' parameter to
+	Name.to_wire() is now optional; if omitted, the wire form will
+	be returned as the value of the function.
+
 2004-08-14  Bob Halley  <halley@dnspython.org>
 
 	* dns/message.py (Message.find_rrset): find_rrset() now uses an
